# kubevirt

./: .bazelrc  BUILD.bazel  README_PPC64LE.md  WORKSPACE  bazeldnf_toolchain.BUILD  generate-ppc64le-rpms-cs10.sh
bazel/toolchain/: toolchain.bzl
bazel/toolchain/ppc64le-none-linux-gnu/: BUILD  cc_toolchain_config_cs10.bzl
cmd/virt-api/: BUILD_IMAGE_USING_BINARY.md
cmd/virt-controller/: BUILD_IMAGE_VIRT_CONTROLLER.md
cmd/virt-handler/: BUILD_IMAGE_VIRT_HANDLER.md
cmd/virt-launcher/: BUILD_IMAGE_VIRT_LAUNCHER.md
cmd/virt-launcher/node-labeller/: node-labeller.sh
docs/: build-and-deploy-kubevirt-ppc64le.md  build-ppc64le-quickstart.md  build-ppc64le-rhel.md  build-the-builder.md  fix-ppc64le-builder-build.md  ppc64le-support-summary.md  release-procedure.md
downstream/: Makefile  NEXT-STEPS.md  QUICKSTART.md  README.md  setup-env.sh
downstream/dockerfiles/: Dockerfile.virt-api  Dockerfile.virt-controller  Dockerfile.virt-exportproxy  Dockerfile.virt-exportserver  Dockerfile.virt-handler  Dockerfile.virt-launcher  Dockerfile.virt-operator
downstream/scripts/: prepare-manifests.sh
downstream/templates/: kubevirt-cr.yaml  kubevirt-operator.yaml
examples/: vm_fedora_ppc64le.yaml
hack/: common.sh
hack/builder/: Dockerfile  Dockerfile.cs10  build.sh  common.sh
pkg/virt-api/webhooks/validating-webhook/admitters/: vmi-create-admitter.go
pkg/virt-config/: virt-config.go
pkg/virt-controller/services/: rendercontainer.go  template.go
pkg/virt-handler/: setsched.go
pkg/virt-launcher/virtwrap/converter/: converter.go
pkg/virt-launcher/virtwrap/converter/arch/: amd64.go  arm64.go  converter.go  ppc64le.go  s390x.go
rpm/: BUILD.bazel  centos_stream.bzl  repo-cs10.yaml  repo-cs9.yaml
tools/aspect_bazel_lib_toolchains/: BUILD.bazel
tools/bazeldnf/: BUILD.bazel  bazeldnf_wrapper.sh
tools/coreutils/: BUILD.bazel
tools/jq/: BUILD.bazel
tools/zstd/: BUILD.bazel
